# internal_shock_sim

./: Makefile  Makefile.am  Makefile.am~  Makefile.in  README.md  aclocal.m4  config.status  configure  configure.ac  configure.ac~  grbSim  grbSim.cxx  initialize.txt  jetSetup.ipynb  jetSetup.py  look at things.ipynb  test.txt  test2.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
electrons/: Untitled0.ipynb  time_1.txt  time_10.txt  time_100.txt  time_101.txt  time_102.txt  time_103.txt  time_104.txt  time_105.txt  time_11.txt  time_12.txt  time_13.txt  time_14.txt  time_15.txt  time_16.txt  time_17.txt  time_18.txt  time_19.txt  time_2.txt  time_20.txt  time_21.txt  time_22.txt  time_23.txt  time_24.txt  time_25.txt  time_26.txt  time_27.txt  time_28.txt  time_29.txt  time_3.txt  time_30.txt  time_31.txt  time_32.txt  time_33.txt  time_34.txt  time_35.txt  time_36.txt  time_37.txt  time_38.txt  time_39.txt  (+66 more)
electrons/.ipynb_checkpoints/: Untitled0-checkpoint.ipynb
include/: collisionHist.hh  electrons.hh  jet.hh  photons.hh  radiationProp.hh  radiator.hh  shell.hh  shellState.hh  spectrum.hh  synchrotronElectrons.hh
photons/: test0.txt  test1.txt  test2.txt
src/: electrons.cxx  jet.cxx  photons.cxx  radiationProp.cxx  radiator.cxx  shell.cxx  spectrum.cxx  synchrotronElectrons.cxx
src/.deps/: electrons.Po  jet.Po  photons.Po  radiationProp.Po  radiator.Po  shell.Po  spectrum.Po  synchrotronElectrons.Po
trajectory/: viewTrajectory.py
