AC_INIT([grbSim], [0.1], [james.m.burgess@nasa.gov], [grbSim])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define foreign])
#AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
#LT_INIT([disable-static])
AC_SUBST([HRPLUS_SO_VERSION], [0:0:0])
AC_SUBST([HRPLUS_API_VERSION], [0.1])

AC_CONFIG_FILES([Makefile])

PKG_CHECK_MODULES([gsl],[gsl])
#PKG_CHECK_MODULES([CCfits],[CCfits])

#Check for K means library



AC_OUTPUT

